@@ -68,6 +68,8 @@ struct mln_salloc_s {
     mln_size_t             threshold;
     mln_lock_t             index_lock;
     mln_lock_t             stat_lock;
+    struct mln_salloc_s   *prev;
+    struct mln_salloc_s   *next;
 };
 
 extern void *malloc(size_t size);
