@@ -1,3 +1,6 @@
+Changes with melon 1.2.7                                          29 Jul 2015
+    *) Fixed some bugs about lock.
+
 Changes with melon 1.2.6                                          27 Jul 2015
     *) Fixed some bugs of salloc.
 
